[package]
name = "ubertooth"
version = "0.1.0"
authors = ["Andreas Doerr <0xad@gmx.net>"]
edition = "2021"
license  = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { version  = "1.0.68" }
rusb = { version = "0.9.1" }
thiserror = { version = "1.0.38" }

[build-dependencies]
anyhow = { version  = "1.0.66" }
bindgen = { version  = "0.63.0" }

