[package]
name = "ubertooth"
version = "0.1.0"
authors = ["Andreas Doerr <0xad@gmx.net>"]
edition = "2021"
license  = "Apache-2.0 OR MIT"

[dependencies]
anyhow = { workspace = true }
rusb = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
bindgen = { workspace = true }

